# libxml2_flutter_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/libxml2_flutter_plugin_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
lib/: libxml2_flutter_plugin.dart  libxml2_flutter_plugin_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  libxml2_flutter_plugin.c  libxml2_flutter_plugin.h  xml_validator.c  xml_validator.h
